# LearnOneDNN

./: CMakeLists.txt  README.md  hello-world.cpp  int8_infer.cpp  memory_format.cpp  simple_cnn.cpp  simple_cnn_int8.cpp  simple_cnn_post_ops.cpp
simple_cnn/: benchmark_onnx.py  convert_ov.py  quant.py  requirements.txt  save_middle_output.py  train.py
